--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css_files/index.css">
-    <title>Document</title>
+    <link rel="icon" href="image_files/logo.png">
+    <title>Elementor</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="top_navbar">
+            <div class="top_navbar-1">
+                
+            </div>
+            <div class="top_navbar-2">
+
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
