--- a/index.html
+++ b/index.html
@@ -3,20 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Foldit:wght@100..900&family=Nerko+One&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
     <link rel="stylesheet" href="css_files/index.css">
-    <link rel="icon" href="image_files/logo.png">
+    <link rel="icon" href="image_files/small_logo.png">
     <title>Elementor</title>
 </head>
 <body>
+    <!--Navigation Bar starts here-->
     <nav>
         <div class="top_navbar">
             <div class="top_navbar-1">
-                
+
+              <a href="index.html"><div class="logo hover"></div></a>
+
+               <div class="input">
+                <button id="category" class="button_input"><span class="material-symbols-outlined" style="color: white">menu</span></button>
+                <input placeholder="Type to Search">
+                <button id="search" class="button_input"><span class="material-symbols-outlined" style="color: white;">search</span></button>
+               </div>
+
+<!-- the top nav bar icons-->
+               <div>
+                    <span class="material-symbols-outlined" style="color: white">menu</span>
+               </div>
+<!-- top nav bar icons end herer-->
+
+
             </div>
             <div class="top_navbar-2">
 
             </div>
         </div>
     </nav>
+    <!--Navigation Bar Ends here-->
+
+
+    <!--Footer starts here-->
+    <footer>
+        <div class="footer">
+<table style="border-spacing: 20px 0px;">
+    <tr>
+        <td><a href="#" class="table_footer_data">Home</a></td>
+        <td><a href="#" class="table_footer_data">Source Code</a></td>
+        <td><a href="#" class="table_footer_data">Documentation</a></td>
+        <td><a href="#" class="table_footer_data">Contribute</a></td>
+    </tr>
+    <tr>
+        <td><a href="#" class="table_footer_data">Category</a></td>
+        <td><a href="#" class="table_footer_data">CSS Files</a></td>
+        <td><a href="#" class="table_footer_data">HTML Elements</a></td>
+        <td><a href="#" class="table_footer_data">Terms of Services</a></td>
+    </tr>
+    <tr>
+        <td><a href="#" class="table_footer_data">Links</a></td>
+        <td><a href="#" class="table_footer_data">HTML Snippets</a></td>
+        <td><a href="#" class="table_footer_data">Design Inspiration</a></td>
+        <td><a href="#" class="table_footer_data">Community Forum</a></td>
+    </tr>
+    <tr>
+        <td><a href="#" class="table_footer_data">About</a></td>
+        <td><a href="#" class="table_footer_data">Google Libraries</a></td>
+        <td><a href="#" class="table_footer_data">JavaScript</a></td>
+        <td><a href="#" class="table_footer_data">Privacy Policy</a></td>
+    </tr>
+</table>
+
+        </div>
+    </footer>
 </body>
 </html>
