--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Foldit:wght@100..900&family=Nerko+One&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
     <link rel="stylesheet" href="css_files/index.css">
@@ -71,6 +72,17 @@
         <td><a href="#" class="table_footer_data">Google Libraries</a></td>
         <td><a href="#" class="table_footer_data">JavaScript</a></td>
         <td><a href="#" class="table_footer_data">Privacy Policy</a></td>
+    </tr>
+</table>
+<table id="side_footer">
+    <tr>
+        <td><a href="index.html"><div class="footer_logo hover"></div></a></td>
+    </tr>
+    <tr>
+        <td><a href="https://www.github.com/asad-777"><i class="fa-brands fa-github icon_github hover"></i></a>  <a href="https://www.instagram.com/realaxsd/"><i class="fa-brands fa-instagram icon_github hover"></i></a>  <a href="mailto:muhammadasad7.7.2007@gmail.com"><i class="fa-regular fa-envelope icon_github hover"></i></a> <a href="https://www.linkedin.com/in/muhammad-asad-amir-a27541320/"><i class="fa-brands fa-linkedin icon_github hover"></i></a></td>
+    </tr>
+    <tr>
+        <td><p>&copy All Rights Reserved</p></td>
     </tr>
 </table>
 
