--- a/index.html
+++ b/index.html
@@ -30,8 +30,29 @@
                </div>
 
 <!-- the top nav bar icons-->
-               <div>
-                    <span class="material-symbols-outlined" style="color: white">menu</span>
+               <div class="top_blue_icons">
+
+                <div class="hover">
+                    <span class="material-symbols-outlined">help</span>
+                    <p>Help</p>
+                </div>
+                <div class="hover">
+                    <span class="material-symbols-outlined">brightness_6</span>
+                    <p>Theme</p>
+                </div>
+                <div class="hover">
+                    <span class="material-symbols-outlined">favorite</span>
+                    <p>Favorite</p>
+                </div>
+                <div class="hover">
+                    <span class="material-symbols-outlined">person</span>
+                    <p>Profile</p>
+                </div>
+                <div class="hover">
+                    <span class="material-symbols-outlined">settings</span>
+                    <p>Setting</p>
+                </div>
+
                </div>
 <!-- top nav bar icons end herer-->
 
@@ -48,7 +69,7 @@
     <!--Footer starts here-->
     <footer>
         <div class="footer">
-<table style="border-spacing: 20px 0px;">
+<table style="border-spacing: 1vw 0px;">
     <tr>
         <td><a href="#" class="table_footer_data">Home</a></td>
         <td><a href="#" class="table_footer_data">Source Code</a></td>
