--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </table>
 <table id="side_footer">
     <tr>
-        <td><a href="index.html"><img class="footer_logo hover" src="/static/small_logo.png"></a></td>
+        <td><a href="index.html"><img class="footer_logo hover" src="../static/small_logo.png"></a></td>
     </tr>
     <tr>
         <td><a href="https://www.github.com/asad-777"><i class="fa-brands fa-github icon_github hover"></i></a>  <a href="https://www.instagram.com/realaxsd/"><i class="fa-brands fa-instagram icon_github hover"></i></a>  <a href="mailto:muhammadasad7.7.2007@gmail.com"><i class="fa-regular fa-envelope icon_github hover"></i></a> <a href="https://www.linkedin.com/in/muhammad-asad-amir-a27541320/"><i class="fa-brands fa-linkedin icon_github hover"></i></a></td>
