--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="top_navbar">
             <div class="top_navbar-1">
 
-              <a href="index.html"><img src="/static/small_logo.png" class="hover logo"></a>
+              <a href="index.html"><img src="../static/small_logo.png" class="hover logo"></a>
 
                <div class="input">
                 <button id="category" class="button_input"><span class="material-symbols-outlined" style="color: white">menu</span></button>
