--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
-    <link rel="stylesheet" href="/static/index.css">
-    <link rel="icon" href="/static/small_logo.png">
+    <link rel="stylesheet" href="../static/index.css">
+    <link rel="icon" href="../static/small_logo.png">
     <title>Elementor</title>
 </head>
 <body>
