--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="static/index.css">
-    <link rel="icon" href="../static/small_logo.png">
+    <link rel="icon" href="/static/small_logo.png">
     <title>Elementor</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
         <div class="top_navbar">
             <div class="top_navbar-1">
 
-              <a href="index.html"><img src="../static/small_logo.png" class="hover logo"></a>
+              <a href="index.html"><img src="/static/small_logo.png" class="hover logo"></a>
 
                <div class="input">
                 <button id="category" class="button_input"><span class="material-symbols-outlined" style="color: white">menu</span></button>
@@ -97,7 +97,7 @@
 </table>
 <table id="side_footer">
     <tr>
-        <td><a href="index.html"><img class="footer_logo hover" src="../static/small_logo.png"></a></td>
+        <td><a href="index.html"><img class="footer_logo hover" src="/static/small_logo.png"></a></td>
     </tr>
     <tr>
         <td><a href="https://www.github.com/asad-777"><i class="fa-brands fa-github icon_github hover"></i></a>  <a href="https://www.instagram.com/realaxsd/"><i class="fa-brands fa-instagram icon_github hover"></i></a>  <a href="mailto:muhammadasad7.7.2007@gmail.com"><i class="fa-regular fa-envelope icon_github hover"></i></a> <a href="https://www.linkedin.com/in/muhammad-asad-amir-a27541320/"><i class="fa-brands fa-linkedin icon_github hover"></i></a></td>
