--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <link rel="stylesheet" href="static/index.css">
-    <link rel="icon" href="static/small_logo.png">
+    <link rel="icon" href="Elementor/static/small_logo.png">
     <title>Elementor</title>
 </head>
 <body>
