--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <link rel="icon" href="static/small_logo.png">
     <title>Elementor</title>
 </head>
-<body>
     <!--Navigation Bar starts here-->
-    <nav>
+    <body>
         <div class="top_navbar">
             <div class="top_navbar-1">
 
@@ -32,26 +31,26 @@
 <!-- the top nav bar icons-->
                <div class="top_blue_icons">
 
-                <div class="hover">
+                <a href=""><div class="hover">
                     <span class="material-symbols-outlined">help</span>
                     <p>Help</p>
-                </div>
-                <div class="hover">
+                </div></a>
+                <a href=""><div class="hover">
                     <span class="material-symbols-outlined">brightness_6</span>
                     <p>Theme</p>
-                </div>
-                <div class="hover">
+                </div></a>
+                <a href=""><div class="hover">
                     <span class="material-symbols-outlined">favorite</span>
                     <p>Favorite</p>
-                </div>
-                <div class="hover">
+                </div></a>
+                <a href=""><div class="hover">
                     <span class="material-symbols-outlined">person</span>
                     <p>Profile</p>
-                </div>
-                <div class="hover">
+                </div></a>
+                <a href=""><div class="hover">
                     <span class="material-symbols-outlined">settings</span>
                     <p>Setting</p>
-                </div>
+                </div></a>
 
                </div>
 <!-- top nav bar icons end here-->
@@ -59,7 +58,17 @@
 
             </div>
             <div class="top_navbar-2">
-
+                <div class="top_orange_links">
+                    <a href="" class="orange_nav_lin">Html Snippets</a>
+                    <a href="" class="orange_nav_lin">Css Files</a>
+                    <a href="" class="orange_nav_lin">JavaScript Code</a>
+                    <a href="" class="orange_nav_lin">Icon Links</a>
+                    <a href="" class="orange_nav_lin">Font Links</a>
+                    <a href="" class="orange_nav_lin">Source Code</a>
+                    <a href="" class="orange_nav_lin">Contribute</a>
+                    <a href="" class="orange_nav_lin">Color Schemes</a>
+                    <a href="" class="orange_nav_lin">Help and Support</a>
+                </div>
             </div>
         </div>
     </nav>
