fixed header and footer position

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
         </div>
     </nav>
     <!--Navigation Bar Ends here-->
+<div id="body_main">
 
-
+</div>
     <!--Footer starts here-->
     <footer>
         <div class="footer">
