random catalog made

--- a/index.html
+++ b/index.html
@@ -74,7 +74,24 @@
     </nav>
     <!--Navigation Bar Ends here-->
 <div id="body_main">
+    <div class="top_slider_catalog">
+        <div class="slider_catalog slider hover">
+            <ul>
+                <li><a>TaskBars</a></li>
+                <li><a>Footers</a></li>
+                <li><a>Navigation Pannels</a></li>
+                <li><a>Ablout Pages</a></li>
+                <li><a>Icons Usage</a></li>
+                <li><a>JavaScripting</a></li>
+                <li><a>Source Code</a></li>
+                <li><a>How it Works</a></li>
+                <li><a>More..</a></li>
+            </ul>
+        </div>
+        <div class="slider_image slider">
 
+        </div>
+    </div>
 </div>
     <!--Footer starts here-->
     <footer>
