side catalog fixing 1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
     <link rel="stylesheet" href="static/index.css">
+    <link rel="stylesheet" href="static/main_body.css">
     <link rel="icon" href="static/small_logo.png">
     <title>Elementor</title>
 </head>
@@ -59,15 +60,15 @@
             </div>
             <div class="top_navbar-2">
                 <div class="top_orange_links">
-                    <a href="" class="orange_nav_lin">Html Snippets</a>
-                    <a href="" class="orange_nav_lin">Css Files</a>
-                    <a href="" class="orange_nav_lin">JavaScript Code</a>
-                    <a href="" class="orange_nav_lin">Icon Links</a>
-                    <a href="" class="orange_nav_lin">Font Links</a>
-                    <a href="" class="orange_nav_lin">Source Code</a>
-                    <a href="" class="orange_nav_lin">Contribute</a>
-                    <a href="" class="orange_nav_lin">Color Schemes</a>
-                    <a href="" class="orange_nav_lin">Help and Support</a>
+                    <a href="#" class="orange_nav_lin">Html Snippets</a>
+                    <a href="#" class="orange_nav_lin">Css Files</a>
+                    <a href="#" class="orange_nav_lin">JavaScript Code</a>
+                    <a href="#" class="orange_nav_lin">Icon Links</a>
+                    <a href="#" class="orange_nav_lin">Font Links</a>
+                    <a href="#" class="orange_nav_lin">Source Code</a>
+                    <a href="#" class="orange_nav_lin">Contribute</a>
+                    <a href="#" class="orange_nav_lin">Color Schemes</a>
+                    <a href="#" class="orange_nav_lin">Help and Support</a>
                 </div>
             </div>
         </div>
