side catalog fixed and final

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
     <div class="top_slider_catalog">
         <div class="slider_catalog slider hover">
             <ul>
-                <li><a>TaskBars</a></li>
-                <li><a>Footers</a></li>
-                <li><a>Navigation Pannels</a></li>
-                <li><a>Ablout Pages</a></li>
-                <li><a>Icons Usage</a></li>
-                <li><a>JavaScripting</a></li>
-                <li><a>Source Code</a></li>
-                <li><a>How it Works</a></li>
-                <li><a>More..</a></li>
+                <li><a href="#" class="border-bototom">TaskBars</a></li>
+                <li><a href="#" class="border-bototom">Footers</a></li>
+                <li><a href="#" class="border-bototom">Navigation Pannels</a></li>
+                <li><a href="#" class="border-bototom">Ablout Pages</a></li>
+                <li><a href="#" class="border-bototom">Icons Usage</a></li>
+                <li><a href="#" class="border-bototom">JavaScripting</a></li>
+                <li><a href="#" class="border-bototom">Source Code</a></li>
+                <li><a href="#" class="border-bototom">How it Works</a></li>
+                <li><a href="#">More..</a></li>
             </ul>
         </div>
         <div class="slider_image slider">
@@ -97,7 +97,7 @@
     <!--Footer starts here-->
     <footer>
         <div class="footer">
-<table style="border-spacing: 1vw 0px;">
+<table style="border-spacing: 0.8vw 0px;">
     <tr>
         <td><a href="#" class="table_footer_data">Home</a></td>
         <td><a href="#" class="table_footer_data">Source Code</a></td>
