--- a/index.html
+++ b/index.html
@@ -90,9 +90,20 @@
             </ul>
         </div>
         <div class="slider_image slider">
-
+            <!--CHat GPT generated code here-->
         </div>
     </div>
+    <!-- Code after the slider and image -->
+     <hr class="hr">
+     
+        <div class="variety1">
+            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+        </div>
+
+     <hr class="hr">
 </div>
     <!--Footer starts here-->
     <footer>
