fr idk what happened

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
      <hr class="hr">
      
         <div class="variety1">
-            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
-            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
-            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
-            <a href="#" class="variety1_a"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a" style="text-decoration: none;"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a" style="text-decoration: none;"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a" style="text-decoration: none;"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
+            <a href="#" class="variety1_a" style="text-decoration: none;"><div class="variety1_box hover"><img src="/static/small_logo.png" alt="Product image"><p class="variety1_box_p">asad</p></div></a>
         </div>
 
      <hr class="hr">
